--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,20 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin: 2px;
+    margin-top: 3px; /*3*/
+    background-position-y:23px; /*23*/
+    
 
   
     display: flex;
     justify-content: center; /* Centrar horizontalmente */
     align-items: center; /* Centrar verticalmente en pantallas grandes */
     min-height: 100vh; /* Asegurar que ocupe toda la altura */
-    background-image: url(/imagenes/flecha.jpg);
-    background-size: 2290px;
+    background-image: url(/imagenes/Screenshot\ 2025-05-20\ at\ 09-54-25\ Presentación\ sin\ título\ -\ Presentaciones\ de\ Google.png);
+    background-size: 1400px;
     background-repeat: no-repeat;
     background-position: left;
-    background-position-x: 520px;
+    background-position-x: 23px;
     background-color: #dbc430;
 }
 
@@ -29,10 +32,10 @@ body {
 header {
     text-align: center; /* Centrar el contenido del header */
     padding-bottom: 20px;
-    margin-bottom: 20px;
+    margin-top: 60px;
     border-bottom: 2px solid #eee;
     border-top: 2px solid #eee;
-    color: #007bff; /* Color azul primario */
+    color: white; /* Color azul primario */
 }
 
 .profile h1 {
@@ -43,6 +46,7 @@ header {
 .job-title {
     color: #6c757d; /* Color gris secundario */
     font-size: 1.1em;
+    font-family: cursive;
 }
 
 .contact-info {
@@ -69,12 +73,31 @@ section {
 
 section h2 {
     font-size: 1.6em;
-    color: #28a745; /* Color verde éxito */
+    color: #FF5733; /* Color verde éxito */
     margin-bottom: 15px;
-    border-bottom: 3px solid #d4edda; /* Borde verde claro */
-    border-top: 1px solid #eee;
+    border-bottom: 3px solid white; /* Borde verde claro */
+
     padding-bottom: 10px;
+    text-decoration-line: underline;
+    margin-top: 30%;
 }
+
+section h4 {
+    font-size: 1.6em;
+    color:  #FF5733; /* Color verde éxito */
+    margin-bottom: 15px;
+    margin-top: 40px;
+    padding-bottom: 10px;
+
+    border-bottom: 3px solid white; /* Borde verde claro */
+
+    text-box: grey;
+    text-decoration-line: underline;
+
+}   
+
+
+
 
 #summary p {
     line-height: 1.7;
@@ -96,6 +119,7 @@ section h2 {
     font-size: 1.3em;
     color: #007bff;
     margin-bottom: 5px;
+    text-align: center;
 }
 
 #experience .company-info {
@@ -136,7 +160,6 @@ section h2 {
 footer {
     text-align: center;
     padding-top: 20px;
-    border-top: 2px solid #eee;
     color: #6c757d;
     font-size: 0.9em;
 }
