--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     align-items: center; /* Centrar verticalmente en pantallas grandes */
     min-height: 100vh; /* Asegurar que ocupe toda la altura */
     background-image: url(/imagenes/flecha.png);
+
     background-size: 1400px;
     background-repeat: no-repeat;
     background-position: left;
@@ -18,6 +19,7 @@ body {
     background-color: #dbc430;
 }
 
+section h6 {text-decoration: dotted;}
 .container {
     background-color: #fff;
     padding: 30px;
