fix: background photo

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     justify-content: center; /* Centrar horizontalmente */
     align-items: center; /* Centrar verticalmente en pantallas grandes */
     min-height: 100vh; /* Asegurar que ocupe toda la altura */
-    background-image: url('./imagenes/flecha.png'); 
+    background-image: url('/imagenes/flecha.png'); 
 
     background-size: 1400px;
     background-repeat: no-repeat;
